--- a/rc/dein_lazy.toml
+++ b/rc/dein_lazy.toml
@@ -283,10 +283,26 @@ let g:quickrun_config = {
 \       "outputter/buffer/split": ":rightbelow vsplit ",
 \   },
 \   "haskell":{'type':'haskell/runghc'},
-\   "haskell/runghc":{
-\       'command': 'stack',
-\       'exec': ['%c runghc -- %o %s %a'],
-\   },
+\ 'haskell/runghc': {
+\   'command': 'stack',
+\   'exec': ['%c runghc -- %o %s %a'],
+\   'tempfile': '%{tempname()}.hs',
+\   'hook/eval/template': 'main = print \$ %s',
+\ },
+\ 'haskell/ghc': {
+\   'command': 'stack',
+\   'exec': ['%c ghc -- %o %s -o %s:p:r', '%s:p:r %a'],
+\   'cmdopt': '-v0 --make',
+\   'tempfile': '%{tempname()}.hs',
+\   'hook/sweep/files': ['%S:p:r', '%S:p:r.o', '%S:p:r.hi'],
+\ },
+\ 'haskell/ghc/core': {
+\   'command': 'stack',
+\   'exec': '%c ghc -- %o -ddump-simpl -dsuppress-coercions %s',
+\   'cmdopt': '-v0 --make',
+\   'tempfile': '%{tempname()}.hs',
+\   'hook/sweep/files': ['%S:p:r', '%S:p:r.o', '%S:p:r.hi'],
+\ },
 \}
 '''
 
