--- a/linux/.vim/rc/dein_lazy.toml
+++ b/linux/.vim/rc/dein_lazy.toml
@@ -6,20 +6,9 @@ repo = 'osyo-manga/vim-precious'
 on_source = 'context_filetype.vim'
 
 [[plugins]]
-repo = 'Shougo/neocomplete.vim'
-depends = 'context_filetype.vim'
-if = "has('lua')"
-on_ft = ['vim', 'haskell', 'toml']
-hook_source = '''
-  let g:neocomplete#enable_at_startup = 1
-  source ~/.vim/rc/plugins/neocomplete.rc.vim
-'''
-
-[[plugins]]
 repo = 'Shougo/neosnippet.vim'
 depends = ['neosnippet-snippets', 'context_filetype.vim']
 on_event = 'InsertCharPre'
-on_ft = 'snippet'
 hook_source = '''
   imap <silent><C-l>     <Plug>(neosnippet_jump_or_expand)
   smap <silent><C-l>     <Plug>(neosnippet_jump_or_expand)
@@ -189,17 +178,6 @@ repo = 'tyru/open-browser.vim'
 [[plugins]]
 repo = 'osyo-manga/vim-brightest'
 
-#[[plugins]]
-#repo = 'davidhalter/jedi-vim'
-#if = "!has('nvim')"
-#on_ft = 'python'
-#hook_source = '''
-#  let g:jedi#completions_enabled = 0
-#  let g:jedi#auto_vim_configuration = 0
-#  let g:jedi#smart_auto_mappings = 0
-#  let g:jedi#show_call_signatures = 0
-#'''
-
 [[plugins]]
 repo = 'kana/vim-smartchr'
 on_event = 'InsertCharPre'
@@ -247,12 +225,6 @@ on_source = 'denite.nvim'
 repo = 'ciaranm/securemodelines'
 on_event = 'BufRead'
 
-[[plugins]]
-repo = 'Shougo/vimshell.vim'
-on_cmd = ['VimShell', 'VS']
-hook_source = '''
-command VS VimShell
-'''
 
 [[plugins]]
 repo = 'leafgarland/typescript-vim'
@@ -274,14 +246,6 @@ on_ft = ['typescript', 'javascript']
 [[plugins]]
 repo = 'rust-lang/rust.vim'
 on_ft = ['rust']
-
-[[plugins]]
-repo = 'Valloric/YouCompleteMe'
-on_ft = ['c', 'cpp', 'cs', 'python', 'go', 'javascript', 'typescript', 'rust']
-hook_source = '''
-let g:ycm_global_ycm_extra_conf = '~/.vim/repos/github.com/Valloric/YouCompleteMe/third_party/ycmd/cpp/ycm/.ycm_extra_conf.py'
-let g:ycm_python_binary_path = '/usr/bin/python3'
-'''
 
 [[plugins]]
 repo = 'ujihisa/unite-haskellimport'
@@ -339,10 +303,13 @@ repo = 'SirVer/ultisnips'
 on_event = 'InsertEnter'
 
 [[plugins]]
-repo = 'jeaye/color_coded'
-build = 'cmake . && make && make install'
-on_ft = ['c', 'cpp', 'objc', 'objcpp']
-
-[[plugins]]
 repo = 'rdnetto/YCM-Generator'
 on_cmd = ['YcmGenerateConfig', 'CCGenerateConfig']
+
+[[plugins]]
+repo = 'zchee/deoplete-jedi'
+depends = 'deoplete.nvim'
+on_ft = ['python', 'python3', 'python2']
+hook_source = '''
+let g:deoplete#sources#jedi#show_docstring = 1
+'''
