--- a/linux/.vim/rc/deineo.toml
+++ b/linux/.vim/rc/deineo.toml
@@ -43,3 +43,11 @@ hook_source = '''
     nnoremap <buffer><silent> [Space]gA :<C-u>call deol#send('git commit --amend')<CR>
   endfunction
 '''
+
+[[plugins]]
+repo = 'arakashic/chromatica.nvim'
+on_ft=['c','cpp']
+hook_source='''
+let g:chromatica#libclang_path='/usr/lib64/libclang.so'
+let g:chromatica#enable_at_startup=1
+'''
