--- a/linux/.vim/rc/dein_lazy.toml
+++ b/linux/.vim/rc/dein_lazy.toml
@@ -318,7 +318,7 @@ let g:vimtex_complete_enabled = 1
 [[plugins]]
 repo = 'Shougo/deoplete.nvim'
 depends = 'context_filetype.vim'
-on_ft = ['vim', 'haskell', 'toml', 'tex', 'plaintex','text','']
+on_ft = ['vim', 'haskell', 'toml', 'tex', 'plaintex','text','verilog','systemverilog']
 hook_source = '''
 let g:deoplete#enable_at_startup = 1
 source ~/.vim/rc/plugins/deoplete.rc.vim
