--- a/linux/.vim/rc/dein.toml
+++ b/linux/.vim/rc/dein.toml
@@ -55,6 +55,10 @@ repo = 'thinca/vim-themis'
 
 [[plugins]]
 repo = 'w0rp/ale'
+hook_source = '''
+let g:ale_lint_on_save=1
+let g:ale_lint_on_text_changed='normal'
+'''
 
 [[plugins]]
 repo = 'ujihisa/neco-look'
