--- a/linux/.vim/rc/deineo.toml
+++ b/linux/.vim/rc/deineo.toml
@@ -44,10 +44,10 @@ hook_source = '''
   endfunction
 '''
 
-[[plugins]]
-repo = 'arakashic/chromatica.nvim'
-on_ft=['c','cpp']
-hook_source='''
-let g:chromatica#libclang_path='/usr/lib64/libclang.so'
-let g:chromatica#enable_at_startup=1
-'''
+#[[plugins]]
+#repo = 'arakashic/chromatica.nvim'
+#on_ft=['c','cpp']
+#hook_source='''
+#let g:chromatica#libclang_path='/usr/local/lib/libclang.so'
+#let g:chromatica#enable_at_startup=1
+#'''
