--- a/linux/.vim/rc/dein_lazy.toml
+++ b/linux/.vim/rc/dein_lazy.toml
@@ -6,80 +6,6 @@ repo = 'osyo-manga/vim-precious'
 on_source = 'context_filetype.vim'
 
 [[plugins]]
-repo = 'Shougo/neomru.vim'
-
-[[plugins]]
-repo = 'Shougo/unite.vim'
-depends = 'neomru.vim'
-on_source = 'denite.nvim'
-hook_source = 'source ~/.vim/rc/plugins/unite.rc.vim'
-
-[[plugins]]
-repo = 'Shougo/denite.nvim'
-on_cmd = 'Denite'
-hook_source = 'source ~/.vim/rc/plugins/denite.rc.vim'
-hook_add = '''
-  nnoremap <silent> ;r
-        \ :<C-u>Denite -buffer-name=register unite:register neoyank<CR>
-  nnoremap <silent> [Window]<Space>
-        \ :<C-u>Denite file_rec:~/.vim/rc<CR>
-  nnoremap <silent> / :<C-u>Denite -buffer-name=search line<CR>
-  nnoremap <silent> * :<C-u>DeniteCursorWord -buffer-name=search -mode=normal line<CR>
-  nnoremap <silent> [Window]s :<C-u>Denite file_point file_old
-        \ `finddir('.git', ';') != '' ? 'file_rec/git' : 'file_rec'`<CR>
-  nnoremap <silent><expr> tt  &filetype == 'help' ?  "g\<C-]>" :
-        \ ":\<C-u>DeniteCursorWord -buffer-name=tag -immediately
-        \  unite:tag unite:tag/include\<CR>"
-  nnoremap <silent><expr> tp  &filetype == 'help' ?
-        \ ":\<C-u>pop\<CR>" : ":\<C-u>Denite unite:jump\<CR>"
-  nnoremap <silent> [Window]n :<C-u>Denite dein<CR>
-  nnoremap <silent> [Window]g :<C-u>Denite ghq<CR>
-  nnoremap <silent> ;g :<C-u>Denite -buffer-name=search -no-empty -mode=normal grep<CR>
-  nnoremap <silent> n :<C-u>Denite -buffer-name=search -resume -mode=normal<CR>
-  nnoremap <silent> ft :<C-u>Denite filetype<CR>
-if has("nvim")
-  nnoremap <silent> <C-t> :<C-u>Denite deol -select=`tabpagenr()-1` -mode=normal<CR>
-endif
-  nnoremap <silent> <C-k> :<C-u>Denite unite:change unite:jump<CR>
-'''
-
-[[plugins]]
-repo = 'Shougo/vimfiler.vim'
-depends = 'unite.vim'
-on_cmd = ['VimFiler', 'VF']
-on_map = {n = '<Plug>'}
-on_if = "isdirectory(bufname('%'))"
-hook_add = 'nnoremap <silent>   [Space]v   :<C-u>VimFiler -invisible<CR>'
-hook_source = '''
-call vimfiler#custom#profile('default', 'context', {
-      \ 'safe' : 0,
-      \ 'auto_expand' : 1,
-      \ 'parent' : 0,
-      \ })
-let g:vimfiler_as_default_explorer = 1
-if IsWindows()
-  let g:vimfiler_detect_drives = [
-        \ 'C:/', 'D:/', 'E:/', 'F:/', 'G:/', 'H:/', 'I:/',
-        \ 'J:/', 'K:/', 'L:/', 'M:/', 'N:/', 'O:/', 'P:/', 'X:/', 'Y:/', 'Z:/']
-  " Use trashbox.
-  let g:unite_kind_file_use_trashbox = 1
-else
-  " Like Textmate icons.
-  let g:vimfiler_tree_leaf_icon = ' '
-  let g:vimfiler_tree_opened_icon = '▾'
-  let g:vimfiler_tree_closed_icon = '▸'
-  let g:vimfiler_file_icon = ' '
-  let g:vimfiler_readonly_file_icon = '✗'
-  let g:vimfiler_marked_file_icon = '✓'
-endif
-command VF VimFiler
-'''
-
-[[plugins]]
-repo = 'Shougo/unite-outline'
-on_source = 'unite.vim'
-
-[[plugins]]
 repo = 'Shougo/neco-vim'
 on_ft = 'vim'
 
@@ -87,28 +13,9 @@ on_ft = 'vim'
 repo = 'Shougo/neoinclude.vim'
 on_source = 'neocomplete.vim'
 
-#[[plugins]]
-#repo = 'justmao945/vim-clang'
-#on_ft = ['cpp', 'c']
-#hook_source = '''
-#let g:clang_auto = 0
-#let g:clang_c_completeopt = 'menuone,noselect'
-#let g:clang_cpp_completeopt = 'menuone,noselect'
-#let g:clang_c_options = '-std=c11 '
-#let g:clang_cpp_options = ' -D "_CRT_SECURE_NO_WARNINGS" -std=c++1z '
-#let g:clang_format_auto = 1
-#let g:clang_auto_select = 0
-#let g:clang_complete_auto = 0
-#'''
-
 [[plugins]]
 repo = 'Shougo/neco-syntax'
 on_source = ['neocomplete.vim','deoplete.nvim']
-
-[[plugins]]
-repo = 'Shougo/vinarise.vim'
-on_cmd = 'Vinarise'
-hook_add = 'let g:vinarise_enable_auto_detect = 1'
 
 [[plugins]]
 repo = 'eagletmt/neco-ghc'
@@ -116,74 +23,45 @@ depends = 'neocomplete.vim'
 on_ft = 'haskell'
 external_commands = 'ghc-mod'
 
-[[plugins]]
-repo = 'tsukkee/unite-tag'
-on_source = 'unite.vim'
+#[[plugins]]
+#repo = 'tyru/caw.vim'
+#on_map = {nx = '<Plug>'}
+#hook_add = '''
+#  function! InitCaw() abort
+#    if !&l:modifiable
+#      silent! nunmap <buffer> gc
+#      silent! xunmap <buffer> gc
+#      silent! nunmap <buffer> gcc
+#      silent! xunmap <buffer> gcc
+#    else
+#      nmap <buffer> gc <Plug>(caw:prefix)
+#      xmap <buffer> gc <Plug>(caw:prefix)
+#      nmap <buffer> gcc <Plug>(caw:hatpos:toggle)
+#      xmap <buffer> gcc <Plug>(caw:hatpos:toggle)
+#    endif
+#  endfunction
+#  call InitCaw()
+#'''
+#
+#[[plugins]]
+#repo = 'rhysd/vim-operator-surround'
+#depends = 'vim-operator-user'
+#on_map = {n = '<Plug>'}
+#hook_add = '''
+#  nmap <silent>sa <Plug>(operator-surround-append)a
+#  nmap <silent>sd <Plug>(operator-surround-delete)a
+#  nmap <silent>sr <Plug>(operator-surround-replace)a
+#  nmap <silent>sc <Plug>(operator-surround-replace)a
+#'''
 
-[[plugins]]
-repo = 'tyru/caw.vim'
-on_map = {nx = '<Plug>'}
-hook_add = '''
-  function! InitCaw() abort
-    if !&l:modifiable
-      silent! nunmap <buffer> gc
-      silent! xunmap <buffer> gc
-      silent! nunmap <buffer> gcc
-      silent! xunmap <buffer> gcc
-    else
-      nmap <buffer> gc <Plug>(caw:prefix)
-      xmap <buffer> gc <Plug>(caw:prefix)
-      nmap <buffer> gcc <Plug>(caw:hatpos:toggle)
-      xmap <buffer> gcc <Plug>(caw:hatpos:toggle)
-    endif
-  endfunction
-  call InitCaw()
-'''
-
-[[plugins]]
-repo = 'rhysd/vim-operator-surround'
-depends = 'vim-operator-user'
-on_map = {n = '<Plug>'}
-hook_add = '''
-  nmap <silent>sa <Plug>(operator-surround-append)a
-  nmap <silent>sd <Plug>(operator-surround-delete)a
-  nmap <silent>sr <Plug>(operator-surround-replace)a
-  nmap <silent>sc <Plug>(operator-surround-replace)a
-'''
-
-[[plugins]]
-repo = 'kannokanno/previm'
-# on_ft = ['markdown', 'rst', 'mkd']
-on_cmd = 'PrevimOpen'
-depends = 'open-browser.vim'
-
-[[plugins]]
-repo = 'tyru/open-browser.vim'
-
-[[plugins]]
-repo = 'osyo-manga/vim-brightest'
-
-[[plugins]]
-repo = 'tweekmonster/impsort.vim'
-on_cmd = 'ImpSort'
-hook_source = 'let g:impsort_highlight_imported = 0'
-
-[[plugins]]
-repo = 'nixprime/cpsm'
-on_source = 'denite.nvim'
 
 [[plugins]]
 repo = 'rhysd/vim-gfm-syntax'
 on_event = 'BufRead'
 
 [[plugins]]
-repo = 'Jagua/vim-denite-ghq'
-on_source = 'denite.nvim'
-
-[[plugins]]
 repo = 'ciaranm/securemodelines'
 on_event = 'BufRead'
-
 
 [[plugins]]
 repo = 'leafgarland/typescript-vim'
@@ -226,18 +104,18 @@ let g:haskell_conceal = 0
 let g:haskell_conceal_enumerate = 0
 '''
 
-[[plugins]]
-repo  =  'thinca/vim-quickrun'
-on_cmd  =  ['QuickRun',  'QR']
-hook_source  =  '''
-command QR QuickRun
-"let g:quickrun_config = {
-"\    "_":{
-"\    "runner":"terminal", 
-"\    "runner/terminal/opener":"vsplit"
-"\    }
-"\}
-'''
+#[[plugins]]
+#repo  =  'thinca/vim-quickrun'
+#on_cmd  =  ['quickRun',  'QR']
+#hook_source  =  '''
+#command qr quickrun
+#"let g:quickrun_config = {
+#"\    "_":{
+#"\    "runner":"terminal", 
+#"\    "runner/terminal/opener":"vsplit"
+#"\    }
+#"\}
+#'''
 
 [[plugins]]
 repo  =  'osyo-manga/shabadou.vim'
@@ -254,6 +132,7 @@ on_source  =  'vim-watchdogs.vim'
 
 [[plugins]]
 repo  =  'osyo-manga/vim-watchdogs'
+on_event='InsertEnter'
 
 [[plugins]]
 repo  =  'thinca/vim-ref'
@@ -262,14 +141,6 @@ repo  =  'thinca/vim-ref'
 repo  =  'ujihisa/ref-hoogle'
 depends = 'vim-ref'
 on_ft  =  ['haskell']
-
-[[plugins]]
-repo = 'SirVer/ultisnips'
-on_event = 'InsertEnter'
-
-[[plugins]]
-repo = 'rdnetto/YCM-Generator'
-on_cmd = ['YcmGenerateConfig', 'CCGenerateConfig']
 
 [[plugins]]
 repo = 'lervag/vimtex'
@@ -315,50 +186,15 @@ let g:vimtex_compiler_latexrun_engines = {
 let g:vimtex_compiler_progname = 'nvr'
 let g:vimtex_complete_enabled = 1
 '''
-[[plugins]]
-repo = 'Shougo/deoplete.nvim'
-depends = 'context_filetype.vim'
-on_ft = ['vim', 'haskell', 'toml', 'tex', 'plaintex','text','verilog','systemverilog']
-hook_source = '''
-let g:deoplete#enable_at_startup = 1
-source ~/.vim/rc/plugins/deoplete.rc.vim
-'''
-[[plugins]]
-repo = 'Valloric/YouCompleteMe'
-on_ft = ['c', 'cpp', 'cs', 'python', 'python3', 'go', 'javascript', 'typescript', 'rust']
-hook_source = '''
-let g:ycm_global_ycm_extra_conf = '~/.vim/repos/github.com/Valloric/YouCompleteMe/third_party/ycmd/cpp/ycm/.ycm_extra_conf.py'
-let g:ycm_python_binary_path = '/usr/bin/python3'
-let g:ycm_autoclose_preview_window_after_completion=1
-'''
-
-[[plugins]]
-repo = 'kana/vim-smartchr'
-on_ft=['python','python3']
-hook_source = '''
-augroup MyAutoCmd
-    " Substitute .. into -> .
-    autocmd FileType c,cpp inoremap <buffer> <expr> .
-    \ smartchr#loop('.', '->', '...')
-    autocmd FileType vim inoremap <buffer> <expr> .
-    \ smartchr#loop('.', ' . ', '..', '...')
-    autocmd FileType lisp,scheme,clojure inoremap <buffer> <expr> = =
-    autocmd FileType haskell,int-ghci
-    \  inoremap <buffer> <expr> + smartchr#loop('+', ' ++ ')
-    \| inoremap <buffer> <expr> - smartchr#loop('-', ' -> ', ' <- ')
-    \| inoremap <buffer> <expr> $ smartchr#loop(' $ ', '$')
-    \| inoremap <buffer> <expr> \ smartchr#loop('\ ', '\')
-    \| inoremap <buffer> <expr> : smartchr#loop(':', ' :: ', ' : ')
-    \| inoremap <buffer> <expr> . smartchr#loop('.', ' . ', '..')
-    autocmd FileType c,cpp,vim,lisp,scheme,clojure,haskell,int-ghci,rust,python,python3,py3,py 
-    \inoremap <expr> , smartchr#one_of(', ', ',')
-    \|inoremap <expr> =
-    \ search('\(&\<bar><bar>\<bar>+\<bar>-\<bar>/\<bar>>\<bar><\) \%#', 'bcn')? '<bs>= '
-    \ : search('\(*\<bar>!\)\%#', 'bcn') ? '= '
-    \ : smartchr#one_of(' = ', '=', ' == ')
-augroup END
-'''
-
+#[[plugins]]
+#repo = 'Valloric/YouCompleteMe'
+#on_ft = ['c', 'cpp', 'cs', 'python', 'python3', 'go', 'javascript', 'typescript', 'rust', 'py', 'python2']
+#hook_source = '''
+#let g:ycm_global_ycm_extra_conf = '~/.vim/repos/github.com/Valloric/YouCompleteMe/third_party/ycmd/.ycm_extra_conf.py'
+#let g:ycm_python_binary_path = '/usr/bin/python3'
+#let g:ycm_autoclose_preview_window_after_completion=1
+#let g:ycm_max_diagnostics_to_display=0
+#'''
 
 [[plugins]]
 repo = 'Shougo/neosnippet.vim'
@@ -374,3 +210,32 @@ hook_source = '''
   let g:neosnippet#snippets_directory = '~/.vim/neosnippets'
 '''
 
+[[plugins]]
+repo = 'Shougo/deoplete.nvim'
+depends = 'context_filetype.vim'
+on_event='InsertEnter'
+hook_source = '''
+let g:deoplete#enable_at_startup = 1
+source ~/.vim/rc/plugins/deoplete.rc.vim
+call deoplete#custom#source('LanguageClient','min_pattern_length',2)
+'''
+
+[[plugins]]
+repo = 'autozimu/LanguageClient-neovim'
+rev='next'
+depends=['deoplete.nvim']
+on_ft=['c','cpp']
+build='bash install.sh'
+hook_add='''
+set hidden
+let g:LanguageClient_autoStart=1
+let g:LanguageClient_serverCommands={
+    \ 'c':['clangd'],
+    \ 'cpp':['clangd'],
+\}
+let g:LanguageClient_loadSettings=1
+nnoremap K :call LanguageClient#textDocument_hover()<CR>
+'''
+hook_source='''
+set completefunc=LanguageClient#complete
+'''
